--- a/TRMNL/src/shared.liquid
+++ b/TRMNL/src/shared.liquid
@@ -232,14 +232,15 @@
     var rawElectricity = [
       {% for item in electricity %}
         {% assign t_price = item.marketPrice | plus: item.marketPriceTax | plus: item.sourcingMarkupPrice | plus: item.energyTaxPrice %}
-        { "from": "{{ item.from }}", "till": "{{ item.till }}", "total_price": {{ t_price | default: 0 }} }
+        { "from": "{{ item.from | date: '%Y-%m-%dT%H:%M:%SZ' }}", "till": "{{ item.till | date: '%Y-%m-%dT%H:%M:%SZ' }}", "total_price": {{ t_price | default: 0 }} }
         {% unless forloop.last %},{% endunless %}
       {% endfor %}
     ];
+    
     var rawGas = [
       {% for item in gas %}
         {% assign t_price = item.marketPrice | plus: item.marketPriceTax | plus: item.sourcingMarkupPrice | plus: item.energyTaxPrice %}
-        { "from": "{{ item.from }}", "till": "{{ item.till }}", "total_price": {{ t_price | default: 0 }} }
+        { "from": "{{ item.from | date: '%Y-%m-%dT%H:%M:%SZ' }}", "till": "{{ item.till | date: '%Y-%m-%dT%H:%M:%SZ' }}", "total_price": {{ t_price | default: 0 }} }
         {% unless forloop.last %},{% endunless %}
       {% endfor %}
     ];
